# remotebrowser

./: .env.template  .prettierignore  AGENTS.md  Dockerfile  Makefile  README.md  capsolver_experiments.py  capsolver_zendriver_test.py  deploy-dokku.md  fly.toml  package-lock.json  package.json  paseo.json  pyproject.toml
.github/workflows/: browser-api-e2e-test.yml  container.yml  deploy-fly.yml  distill-tests.yml  extraction-test.yml  mcp-tests.yml  package.yml  publish.yml  static-analysis.yml  test-daytona.yml
getgather/: browser.py  browsers_api_router.py  captcha_classifier.js  cdp_client.py  config.py  main.py  pages_api_router.py  patterns_api_router.py  podman_browsers.py  recording.py  tracing.py  zen_distill.py
getgather/auth/: auth.py
getgather/browsers/: backend.py  browserbase_browsers.py  daytona_browsers.py  fleet_browsers.py  podman_browsers.py  residential_proxy.py  router.py  settings.py
getgather/mcp/: amazon.py  amazonca.py  browser.py  costco.py  declarative_mcp.py  dpage.py  goodreads.py  html_renderer.py  main.py  mcp-tools.yaml  registry.py  safeway.py  target.py  walgreens.py  walmart.py
getgather/mcp/patterns/: adidas-my-account.html  adidas-orders-empty.html  adidas-orders.html  adidas-password.html  adidas-signin.html  agoda-booking-completed.html  agoda-booking.html  agoda-otp.html  agoda-signin.html  agoda-signup.html  alfagift-home-logged-in.html  alfagift-home.html  alfagift-login.html  aliexpress-email-not-found.html  aliexpress-home-popup.html  aliexpress-home.html  (+471 more)
getgather/webui/: index.html  tabview.js
scripts/: captcha_playground.py  check_pattern_testids.py
tests/: conftest.py  manual.py  test_best_of_n.py  test_browser_api_e2e.py  test_browser_backend.py  test_browserbase_backend.py  test_daytona.py  test_daytona_best_of_n.py  test_daytona_browsers.py  test_extractions.py  test_patterns_api_router.py  test_podman_browsers.py  test_residential_proxy.py  test_walgreens.py
tests/distillation/: test_distill.py
tests/mcp/: test_browser_cleanup.py  test_costco.py  test_target.py  test_tool_call_timeout.py
testscript/: bon_batch.py  bon_batch_noproxy.py  bon_proof.py  bon_proof_parallel.py  daytona_proxy_timing.py  daytona_timing.py  mcp.js  package-lock.json  package.json
testscripts/: mcp.js
(+9 files in other folders)
