[project]
name = "remotebrowser"
version = "0.1.1"
description = "Free your data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "aiofiles>=24.1.0",
  "nanoid>=2.0.0",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.9.1",
  "pyyaml>=6.0.2",
  "sentry-sdk[fastapi]>=2.29.1",
  "rich>=14.0.0",
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.2",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.13.4",
  "fastmcp>=3.0.0,<4",
  "logfire[fastapi,httpx]>=4.13.2",
  "zendriver>=0.14.2",
  "loguru>=0.7.3",
  "httpx-retries>=0.4.6",
  "py-key-value-aio[redis]>=0.4.4",
  "websockets>=15.0.1",
  "geoip2>=5.2.0",
]

[project.optional-dependencies]
# Daytona backend (BROWSER_BACKEND=daytona). Optional so podman-only installs stay unchanged.
# daytona's async client pulls httpx-ws, which uses anyio.AsyncContextManagerMixin (anyio>=4.10)
# but under-declares its floor; pin anyio here so the async client imports.
daytona = ["daytona>=0.183.0", "anyio>=4.10"]

[dependency-groups]
dev = [
  "assertpy>=1.1",
  "faker>=33.3.0",
  "nanoid>=2.0.0",
  "pyright>=1.1.409",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23.5",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.7.0",
  "ruff>=0.11.6",
  "yamlfix>=1.6.1",
  "python-fasthtml>=0.12.21",
  "pyinstaller>=6.19.0",
]

[project.scripts]
remotebrowser = "getgather.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["getgather"]

[tool.hatch.build.targets.wheel.force-include]
"getgather/webui" = "getgather/webui"
"getgather/mcp/patterns" = "getgather/mcp/patterns"

[tool.hatch.build]
only-packages = true

[tool.ruff]
src = ["getgather", "tests"]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.venv",
  "**/venv",
  "**/htmlcov",
  "**/alembic/versions",
  "**/node_modules",
  "**/*env/*",
  "**/.git",
  "**/*.yaml",
  "**/*.yml",
]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["I", "UP045", "UP006", "UP007"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["getgather", "tests"]

[tool.yamlfix]
exclude = ["**/.venv/**"]
explicit_start = false
line_length = 120
whitelines = 1
